# FujiShaderGPU

./: .coverage  .gitattributes  .gitignore  ALGORITHM_CANDIDATES.md  ARCHITECTURE.md  ARCHITECTURE_DECISION_tile_vs_dask.md  CODE_REVIEW.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_REPORT_VERIFICATION.md  README.md  REFACTORING_PLAN_DASK_SHARED.md  __init__.py  __main__.py  base.py  cog_validator.py  dask_algorithms.py  pyproject.toml  raster_info.py  scale_analysis.py  system_config.py  types.py
FujiShaderGPU/: __init__.py  __main__.py  main.py  prepare.py
FujiShaderGPU.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
FujiShaderGPU/algorithms/: __init__.py  _base.py  _global_stats.py  _impl_ambient_occlusion.py  _impl_atmospheric_scattering.py  _impl_blur.py  _impl_curvature.py  _impl_experimental.py  _impl_fractal_anomaly.py  _impl_frangi.py  _impl_hillshade.py  _impl_lic.py  _impl_lrm.py  _impl_multiscale_terrain.py  _impl_npr_edges.py  _impl_openness.py  _impl_phase_congruency.py  _impl_rvi.py  _impl_scale_drift.py  _impl_slope.py  _impl_specular.py  _impl_structure_tensor.py  _impl_topousm_fast.py  _impl_tv_decomposition.py  _impl_visual_saliency.py  _nan_utils.py  _norm_stats.py  _normalization.py  _pyramid_fill.py  atmospheric_scattering.py  base.py  composite_terrain.py  curvature.py  dask_algorithms.py  dask_registry.py  dask_shared.py  frequency_enhancement.py  hillshade.py  rvi_gaussian.py  tile_algorithms.py  (+3 more)
FujiShaderGPU/algorithms/common/: __init__.py  auto_params.py  kernels.py  spatial_mode.py
FujiShaderGPU/algorithms/dask/: __init__.py  atmospheric_scattering.py  blur.py  curvature.py  fractal_anomaly.py  frangi.py  hillshade.py  lic.py  lrm.py  multi_light_uncertainty.py  multiscale_terrain.py  npr_edges.py  phase_congruency.py  rvi.py  scale_drift.py  slope.py  specular.py  structure_tensor.py  topousm_fast.py  tv_decomposition.py
FujiShaderGPU/algorithms/tile/: ambient_occlusion.py  atmospheric_scattering.py  blur.py  curvature.py  dask_bridge.py  fractal_anomaly.py  frangi.py  hillshade.py  lic.py  multi_light_uncertainty.py  npr_edges.py  phase_congruency.py  scale_drift.py  scale_space_surprise.py  specular.py  structure_tensor.py  topousm_fast.py  tv_decomposition.py
FujiShaderGPU/cli/: __init__.py  args.py  base.py  linux_cli.py  windows_cli.py
FujiShaderGPU/config/: __init__.py  auto_tune.py  gdal_config.py  gpu_config_manager.py  gpu_presets.yaml  spatial_presets.yaml  system_config.py
FujiShaderGPU/core/: __init__.py  dask_cluster.py  dask_io.py  dask_processor.py  gpu_memory.py  system_config.py  tile_compute.py  tile_io.py  tile_processor.py
FujiShaderGPU/io/: __init__.py  cog_builder.py  cog_validator.py  dem_preprocess.py  gdal_config.py  output_encoding.py  raster_info.py
FujiShaderGPU/utils/: __init__.py  cpu.py  memory.py  nodata_handler.py  paths.py  scale_analysis.py  types.py
docs/archive/reviews/: AUDIT_VERIFICATION_20260717.md  CODE_AUDIT_20260717.md  CODE_REVIEW_2026.md  CODE_REVIEW_SakanaAI_Fugu.md
tests/: test_algorithm_smoke.py  test_atmospheric_scattering_angles.py  test_audit_followup_regressions.py  test_audit_m17_range_parity.py  test_audit_p1_regressions.py  test_audit_p1_remaining.py  test_audit_p2_regressions.py  test_audit_p3_regressions.py  test_audit_p4_regressions.py  test_audit_p5_regressions.py  test_cog_overviews.py  test_curvature_analytic.py  test_dem_preprocess.py  test_fractal_anomaly_normalization.py  test_geographic_parity.py  test_local_spatial_modes.py  test_new_algorithms_2026.py  test_nodata_handler.py  test_openness_yokoyama.py  test_output_nodata_policy.py  test_registry_cli_sync.py  test_rvi_normalization.py  test_spatial_auto_radii.py  test_topousm_fast_normalization.py  test_visual_saliency_normalization.py  test_visual_saliency_tile_stability.py  test_zarr_io.py
tools/: debug_fractal_anomaly.py  install_gdal.py
