[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FujiShaderGPU"
version = "1.0.1"
description = "Lightning fast terrain shader for a big Cloud Optimized GeoTIFF"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Fumihiko IKEGAMI", email = "f.ikegami@gmail.com"},
]
maintainers = [
    {name = "Fumihiko IKEGAMI", email = "f.ikegami@gmail.com"},
]
keywords = [
    "DEM", "terrain", "visualization", "GPU", "CUDA", "CuPy",
    "shader", "renderer", "geospatial", "COG", "QGIS"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
]
# cupy-cuda12x 13.x needs >=3.9; the Linux RAPIDS extra (rmm/cudf-cu12 25.6) needs
# >=3.10, so 3.10 is the project-wide floor.
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.21.0",
    "PyYAML>=6.0.0",
    "cupy-cuda12x>=13.4.0",  # CUDA 12.x build; use cupy-cuda11x instead for CUDA 11
    "rasterio>=1.3.0",
    "psutil>=5.8.0",
    "tqdm",
]

[project.optional-dependencies]
# GDAL Python bindings (osgeo) are intentionally NOT declared here: the binding
# must match the native libgdal, so install it separately first. See the
# "Installing GDAL" section in README.md. In short:
#   conda:  conda install -c conda-forge gdal          # easiest, Linux or Windows
#   apt:    sudo apt-get install -y libgdal-dev gdal-bin
#           CPLUS_INCLUDE_PATH=/usr/include/gdal pip install --no-build-isolation "GDAL==$(gdal-config --version)"
# Verify with:  python -c "from osgeo import gdal; print(gdal.__version__)"
# Linux/Dask-CUDA runtime environment
linux = [
    "dask-cuda>=24.6",
    "dask[array]>=2024.4",
    "distributed>=2024.4",
    "zarr>=2.18",
    "xarray>=2024.1",
    "rioxarray>=0.15",
    "scipy>=1.7.0",
    "GPUtil>=1.4",
    "rmm-cu12>=25.6",
    "cudf-cu12>=25.6",
]
# Windows/macOS tile-processing runtime environment
windows = [
    "dask[array]>=2024.4",
    "scipy>=1.7.0",
]
# For advanced terrain-analysis features
full = [
    "dask[array]>=2024.4",
    "scipy>=1.7.0",
]
# For development
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "vulture>=2.7",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]
# For documentation generation
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.23.0",
]
# For benchmarking
benchmark = [
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.60.0",
]

[project.urls]
Homepage = "https://github.com/geoign/FujiShaderGPU"
Documentation = "https://github.com/geoign/FujiShaderGPU"
Repository = "https://github.com/geoign/FujiShaderGPU.git"
Issues = "https://github.com/geoign/FujiShaderGPU/issues"

[project.scripts]
fujishadergpu = "FujiShaderGPU.__main__:main"
fujishadergpu-prepare = "FujiShaderGPU.prepare:main"

[tool.setuptools.package-data]
FujiShaderGPU = ["*.json", "*.yaml", "*.yml", "**/*.yaml", "**/*.yml", "**/*.json"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"FujiShaderGPU/algorithms/dask_shared.py" = ["F401"]
"tests/test_dem_preprocess.py" = ["E402"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Default exclusion settings
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | images
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known_third_party = ["numpy", "cupy", "cupyx", "rasterio", "osgeo", "scipy", "psutil"]
known_first_party = ["FujiShaderGPU"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=FujiShaderGPU",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["FujiShaderGPU"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Package configuration details
[tool.setuptools.packages.find]
where = ["."]
include = ["FujiShaderGPU*"]
exclude = ["tests*", "docs*", "examples*", "images*"]
